adicao do esqueleto da logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,11 @@
     <title>landingpageUm</title>
 </head>
 <body>
-    <h1>Esqueleto</h1>
+    <header>
+        <div id="cabecalho">
+            <img src="./assets/logoShopify2.png" alt="Logo Shopify" >
+            <h3>shopify</h3>
+        </div>
+    </header>
 </body>
 </html>
