inclusao do titulo (h1 e p)

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
             <h3>shopify</h3>
         </div>
     </header>
+    <section>
+        <div id="title">
+            <h1>Sell online with Shopify</h1>
+            <p>Trusted by millions of businesses worldwide</p>
+        </div>
+    </section>
 </body>
 </html>
