inclusao do input e primeiro button

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
             <p>Trusted by millions of businesses worldwide</p>
         </div>
     </section>
+    <section>
+        <div id="inputButton">
+            <input type="text" placeholder="Enter your email address">
+            <button>Start free trial</button>
+        </div>
+    </section>
 </body>
 </html>
