inclusao da tag p e ajuste da estrutura inputButton

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
         </div>
     </section>
     <section>
-        <div id="inputButton">
-            <input type="text" placeholder="Enter your email address">
-            <button>Start free trial</button>
+        <div id="inputButtonP">
+            <div>
+                <input type="text" placeholder="Enter your email address">
+                <button>Start free trial</button>
+            </div>
+            <p>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</p>
         </div>
     </section>
+    
 </body>
 </html>
