download imagem shopify store

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
             <p>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</p>
         </div>
     </section>
+    <section>
+        <div id="img">
+            <img src="" alt="">
+        </div>
+    </section>
 </body>
 </html>
