inclusao da estrutura da imagem da shopify store

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
     <section>
         <div id="img">
-            <img src="" alt="">
+            <img src="./assets/shopifyStore.png" alt="Imagem de uma tela de notebook com imagem dos produtos da shopify">
         </div>
     </section>
 </body>
