alteração da imagem no assets

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>landingpageUm</title>
 </head>
 <body>
+    <div class="backgroundImg"></div>
     <header>
         <div id="cabecalho">
-            <img src="./assets/logoShopify2.png" alt="Logo Shopify" >
-            <h3>shopify</h3>
+            <img class="logo" src="./assets/logo_shopify_icon.png" alt="Logo Shopify" >
+            <h3 class="shopifyTitle">shopify</h3>
         </div>
     </header>
     <section>
