--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>landingpageUm</title>
 </head>
 <body>
-    <div class="backgroundImg"></div>
     <header>
         <div id="cabecalho">
             <img class="logo" src="./assets/logo_shopify_icon.png" alt="Logo Shopify" >
@@ -22,17 +21,17 @@
     </section>
     <section>
         <div id="inputButtonP">
-            <div>
+            <div class="inputBu">
                 <input type="text" placeholder="Enter your email address">
                 <button>Start free trial</button>
             </div>
             <p>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</p>
         </div>
-    </section>
+    <!--</section>
     <section>
         <div id="img">
             <img src="./assets/shopifyStore.png" alt="Imagem de uma tela de notebook com imagem dos produtos da shopify">
         </div>
-    </section>
+    </section>-->
 </body>
 </html>
