Ajustando ondulacao body

--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
     <title>landingpageUm</title>
 </head>
 <body>
-    <header>
-        <div id="cabecalho">
-            <img class="logo" src="./assets/logo_shopify_icon.png" alt="Logo Shopify" >
-            <h3 class="shopifyTitle">shopify</h3>
-        </div>
-    </header>
-    <section>
-        <div id="title">
-            <h1>Sell online with Shopify</h1>
-            <p>Trusted by millions of businesses worldwide</p>
-        </div>
-    </section>
-    <section>
-        <div id="inputButtonP">
-            <div class="inputBu">
-                <input type="text" placeholder="Enter your email address">
-                <button>Start free trial</button>
+    <div id="pattern">
+        <header>
+            <div id="cabecalho">
+                <img class="logo" src="./assets/logo_shopify_icon.png" alt="Logo Shopify" >
+                <h3 class="shopifyTitle">shopify</h3>
             </div>
-            <p>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</p>
-        </div>
-    <!--</section>
-    <section>
-        <div id="img">
-            <img src="./assets/shopifyStore.png" alt="Imagem de uma tela de notebook com imagem dos produtos da shopify">
-        </div>
-    </section>-->
+        </header>
+        <section>
+            <div id="title">
+                <h1>Sell online with Shopify</h1>
+                <p>Trusted by millions of businesses worldwide</p>
+            </div>
+        </section>
+        <section>
+            <div id="inputButtonP">
+                <div class="inputBu">
+                    <input type="text" placeholder="Enter your email address">
+                    <button>Start free trial</button>
+                </div>
+                <p>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</p>
+            </div>
+        <!--</section>
+        <section>
+            <div id="img">
+                <img src="./assets/shopifyStore.png" alt="Imagem de uma tela de notebook com imagem dos produtos da shopify">
+            </div>
+        </section>-->
+    </div>
 </body>
 </html>
