Ajuste da imagem central

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                 </div>
                 <p>Try Shopify free for 14 days, no credit card required. By entering your email, you agree to receive marketing emails from Shopify.</p>
             </div>
-        <!--</section>
+        </section>
         <section>
             <div id="img">
                 <img src="./assets/shopifyStore.png" alt="Imagem de uma tela de notebook com imagem dos produtos da shopify">
             </div>
-        </section>-->
+        </section>
     </div>
 </body>
 </html>
