inclusao da descricao no

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>landingpageUm</title>
 </head>
 <body>
@@ -32,6 +34,27 @@
         <section>
             <div id="img">
                 <img src="./assets/shopifyStore.png" alt="Imagem de uma tela de notebook com imagem dos produtos da shopify">
+            </div>
+        </section>
+        <section>
+            <div id="description">
+                <div>
+                    <span class="device">
+                        devices
+                    </span>
+                    <h3>
+                        Customizable templates
+                    </h3>
+                    <p>
+                        Free website designs to lauch your store quickly and easily.
+                    </p>
+                </div>
+                <div>
+                    <span class="material-symbols-outlined">
+                        credit_card
+                    </span>
+                </div>
+                <div></div>
             </div>
         </section>
     </div>
