--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>landingpageUm</title>
 </head>
 <body>
@@ -39,7 +40,7 @@
         <section>
             <div id="description">
                 <div>
-                    <span class="device">
+                    <span class="material-symbols-outlined">
                         devices
                     </span>
                     <h3>
@@ -53,8 +54,24 @@
                     <span class="material-symbols-outlined">
                         credit_card
                     </span>
+                    <h3>
+                        All in one
+                    </h3>
+                    <p>
+                        Shopify takes care of everynthing from marketing and payments to secure transactions and shipping.
+                    </p>
                 </div>
-                <div></div>
+                <div>
+                    <span class="material-symbols-outlined">
+                        group
+                    </span>
+                    <h3>
+                        A safe and efficient platform
+                    </h3>
+                    <p>
+                        Millions of users trust Shopify to manage their online store.
+                    </p>
+                </div>
             </div>
         </section>
     </div>
