inclusao do HTML das logos dos parceiros

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div id="partners">
+                <div class="line"></div>
+                <div class="logoPartners">
+                    <img src="./assets/logosParceiros.png" alt="imagens das logos dos parceiros da shopify">
+                </div>
+                <div class="line"></div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
