--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
                 <div class="line"></div>
             </div>
         </section>
+        <section>
+            <div id="paragraphFinal">
+                <h3>
+                    "Shopify is better than any other platform we've played with, and we've played with them all." 
+                </h3>
+                <p>
+                    JONATHAN BAYME. CEO OF THEORYLL
+                </p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
