conclusao do ajuste do button start free trail

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
                 </p>
             </div>
         </section>
+        <section>
+            <div id="startFree">
+                <button>Start free trial</button>
+            </div>
+        </section>
     </div>
 </body>
 </html>
