--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>landingpageUm</title>
 </head>
 <body>
@@ -96,6 +97,35 @@
         <section>
             <div id="startFree">
                 <button>Start free trial</button>
+            </div>
+        </section>
+        <section>
+            <div id="doubts">
+                <div class="faq">FAQs</div>
+                <div class="questions">
+                    <p>What is Shopify and how does it work?</p>
+                    <span class="material-symbols-outlined">
+                        add
+                    </span>
+                </div>
+                <div class="questions">
+                    <p>How much does Shopify cost?</p>
+                    <span class="material-symbols-outlined">
+                        add
+                    </span>
+                </div>
+                <div class="questions">
+                    <p>Can i use my own domain name with Shopify?</p>
+                    <span class="material-symbols-outlined">
+                        add
+                    </span>
+                </div>
+                <div class="questions">
+                    <p>Do i need to be a designer or developer to use Shopify?</p>
+                    <span class="material-symbols-outlined">
+                        add
+                    </span>
+                </div>
             </div>
         </section>
     </div>
