conclusao dos ajustes  das faqs no CSS

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <button>Start free trial</button>
             </div>
         </section>
-        <section>
+        <section id="containerDoubts">
             <div id="doubts">
                 <div class="faq">FAQs</div>
                 <div class="questions">
@@ -115,13 +115,13 @@
                     </span>
                 </div>
                 <div class="questions">
-                    <p>Can i use my own domain name with Shopify?</p>
+                    <p>Can I use my own domain name with Shopify?</p>
                     <span class="material-symbols-outlined">
                         add
                     </span>
                 </div>
                 <div class="questions">
-                    <p>Do i need to be a designer or developer to use Shopify?</p>
+                    <p>Do I need to be a designer or developer to use Shopify?</p>
                     <span class="material-symbols-outlined">
                         add
                     </span>
