--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div id="baseboard">
+                <p>Terms of Service</p>
+                <p>Privacy Policy</p>
+            </div>
+        </section>
     </div>
 </body>
 </html>
