conclusao do ajuste de rodape e da langpage

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="containerBaseboard">
             <div id="baseboard">
                 <p>Terms of Service</p>
                 <p>Privacy Policy</p>
